--- a/etc/opennds/htdocs/splash.css
+++ b/etc/opennds/htdocs/splash.css
@@ -40,7 +40,7 @@ body {
     width: 100%;
     max-width: 500px;
     min-width: 300px;
-    padding: 15px 10px;
+    padding: 15px 50px;
     position: relative;
     overflow: hidden;
     border: 1px solid rgba(255, 255, 255, 0.25);
@@ -112,6 +112,39 @@ body {
     margin-top: 30px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     clear: both;
+}
+/* --- Status Messages (Success / Error) --- */
+.status {
+    position: relative;
+    z-index: 10; /* رفع الطبقة عشان تظهر فوق الخلفيات */
+    
+    padding: 15px;
+    border-radius: 12px;
+    margin: 15px 0;
+    font-size: 1.1rem;
+    font-weight: 700;
+    background: white;
+    color: #333;
+    
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    
+    /* تحسين الأداء (Performance Fixes) */
+    transform: translateZ(0);
+    will-change: transform, opacity;
+    
+    /* عشان تيجي تحت العناصر صح */
+    clear: both;
+    display: block;
+}
+
+.success {
+    border-left: 5px solid #27ae60; /* أخضر */
+    color: #27ae60;
+}
+
+.error {
+    border-left: 5px solid #c0392b; /* أحمر */
+    color: #c0392b;
 }
 
 /* --- اللوجو (Float) --- */
