--- a/etc/opennds/htdocs/splash.css
+++ b/etc/opennds/htdocs/splash.css
@@ -333,3 +333,28 @@ copy-right {
 @keyframes spin {
     to { transform: rotate(360deg); }
 }
+/* 1. شكل السبينر نفسه */
+.spinner {
+    display: none; /* مخفي افتراضياً */
+    width: 25px;
+    height: 25px;
+    border: 3px solid rgba(255, 255, 255, 0.3);
+    border-radius: 50%;
+    border-top-color: #fff;
+    animation: spin 1s ease-in-out infinite;
+}
+
+.btn-loading {
+    pointer-events: none; /* منع الضغط مرتين */
+    opacity: 0.9;
+}
+
+/* اخفي الكلام */
+.btn-loading .btn-text {
+    display: none;
+}
+
+/* اظهر السبينر */
+.btn-loading .spinner {
+    display: block !important;
+}
